--- a/views/css/bioCss.ejs
+++ b/views/css/bioCss.ejs
@@ -18,4 +18,31 @@
     margin-left: 20px;
     margin-right: 20px;
   }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  img {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and (max-width: 768px){
+  img {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px){
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 </style>
